<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Health Manager</string>
    <string name="action_settings">Settings</string>
    <string name="signup">SIGNUP</string>
    <string name="about_us">ABOUT US</string>
    <string name="login">LOGIN</string>
    <string name="enter_your_name_here">Enter your name</string>
    <string name="name_">Name:</string>
    <string name="sin_number_">SIN Number:</string>
    <string name="enter_your_sin_number_here">Enter your SIN number</string>
    <string name="password_">Password:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="doctor">Doctor</string>
    <string name="stakeholder">Stakeholder</string>
    <string name="patient">Patient</string>
    <string name="create_user">Create User</string>
    <string name="age_">Age:</string>
    <string name="enter_your_age_here">Enter your age here</string>
    <string name="view_treatment_history">View Treatment History</string>
    <string name="appointment">Appointment</string>
    <string name="log_out">Log out</string>
    <string name="view_schedule">View Schedule</string>
    <string name="start_treatment">Start Treatment</string>
    <string name="employee_apos_s_infomation">Employee\'s Information</string>
    <string name="medicine_repository">Medicine Repository</string>
    <string name="revenue_and_overheads">Revenue and Overheads</string>
    <string name="add_new_description_to_illness">Add new description to illness</string>
    <string name="submit">Submit</string>
    <string name="doc_names">Choose a doctor</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="view_doc">View doctor\'s available time</string>
    <string name="complete">Complete appointment</string>
    <string name="med">Medicine</string>
    <string-array name="doc_list">
        
        <item>Leo</item>
        <item>James</item>
        <item>Zack</item>
        <item>Mick</item>
           
        </string-array>
    <string name="docinfo"> </string>
    <string name="simon_fraser_university">Simon Fraser University</string>
    <string name="doctor_gilbert_lee">doctor Gilbert Lee</string>
    <string name="energency_call_911_or_7784567352">Energency call 911 or 7784567352</string>
</resources>