<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up"
    android:weightSum="23"
    android:orientation="vertical" >
    
    
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:visibility="invisible"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10.49" >
        
        <EditText
	        android:id="@+id/inputName"
	        android:layout_width="250dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:ems="10"
	        android:hint="@string/enter_your_name_here"
	        android:inputType="textPersonName" />
        
                <requestFocus />

	     <EditText
	         android:id="@+id/inputAge"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_alignLeft="@+id/inputName"
	         android:layout_alignParentRight="true"
	         android:layout_below="@+id/inputName"
	         android:layout_marginTop="23dp"
	         android:ems="10"
	         android:hint="@string/enter_your_age_here"
	         android:inputType="number" />

	     <EditText
	         android:id="@+id/inputSINnumber"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_alignLeft="@+id/inputAge"
	         android:layout_below="@+id/inputAge"
	         android:layout_marginTop="23dp"
	         android:ems="10"
	         android:hint="@string/enter_your_sin_number_here"
	         android:inputType="number" />

	     <EditText
	         android:id="@+id/inputPw"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	         android:layout_alignLeft="@+id/inputSINnumber"
	         android:layout_below="@+id/inputSINnumber"
	         android:layout_marginTop="23dp"
	         android:layout_alignParentRight="true"
	         android:ems="10"
	         android:hint="@string/enter_your_password"
	         android:inputType="textPassword" />

    </RelativeLayout>
    


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.87" >

        <CheckBox
            android:id="@+id/docCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/doctor" />

        <CheckBox
            android:id="@+id/patCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/patient" />

        <CheckBox
            android:id="@+id/stakeholderCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stakeholder" />
    </LinearLayout>
    


    <Button
        android:id="@+id/create"
        android:color="#66FF0000"    
	   	android:alpha="0"  
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.43" />

</LinearLayout>